--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.6.0",
     "ejs": "2.5.7",
     "express": "^4.17.1",
+    "express-fileupload": "^1.3.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
     "file-saver": "^2.0.5",
@@ -24,6 +25,7 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "nodemailer": "^6.4.17",
     "passport": "^0.4.1",
     "passport-custom": "^1.1.1",
